tests/badescape.err
2: error: illegal escape character
	print("foo bar \quux");
	                ^
