tests/badescape.juice
// bad escape characters
print("foo bar \quux");
